fix: Update css file to fix horizontal jump

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 
-@custom-variant dark (&:is(.dark *));
+html {
+  scrollbar-gutter: stable;
+}
 
 :root  {
   --color-custom-background: #16454b;
